[package]
name = "ytmusic"
version = "0.1.0"
edition = "2021"
description = "YouTube Music content-resolver"

[dependencies]
bex-core = { path = "bex-core", features = ["resolver"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
urlencoding = "2.1"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.component]
package = "component:content-resolver"

[package.metadata.component.dependencies]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
debug = false